1.0 "Asieoniezi"

0.130 "FIXME"
 433316 task window coordinates set to -32000 on Windows (Argoyne)
 436101 make nzb suffix filter case-insensitive (Darren Albers)
 348445 tweak menu text to reflect multiple group selections (Duncan)

0.129 "Benson & Hedges Moscow Gold"
 436064 RFE: add 'copy url' to context menu
 436101 RFE: add nzb filter to 'import nzb' dialog (Frederic Crozat)
 428578 Crash when trying to post a supersede (Stephane Gregoire)
 434502 changing pane in tabbed mode (Lanif)
 432387 0.128 crash / memory corruption (Jeremy, Pav Lucistnik)
 432289 sometimes queued tasks never decode (Calin)
 419199 wrap should not be mandatory (Bill Baker)
 348445 can't select multiple groups (Artur Jachacy)
 090594 add option to always spawn editor when composign (Gauze)

0.128 "SR/CL: Leitmotiv: Toynbee Idea"
 431247 "Add a Scoring Rule" crashes if no article is selected (Christophe)
 432023 0.127 crashes when loading corrupted groups (Charles)
 432024 Speed improvements when saving and loading groups (Charles)
 431552 0.127 no longer stops downloading when disk is full (Alan Olsen)
 430958 Get N Headers fails if group has small # of headers (Anon)
 429449 Pan 0.126, 0.127 won't compile w/gtk 2.6.x (Jeff Berman)
 429485 Articles marked read showing back up (Frank Tabor)
 407301 All new articles are shown, regardless of score (Per Hedeland)

0.127 "Eckythump"
 428151 Compilation error in e-util.cc under fink (SciFi)
 424381 Pango warnings from attachments with accented chars (SciFi)
 427230 Sigfiles with CR/LFs not handled properly (Artur Jachacy)
 393589 X-Face not shown properly (Ivan Rajkovic)
 425993 Crash when downloading new headers in 0.126 (Drew Yavor)
 427212 Crash when hitting 'read more' when no group loaded (Duncan)
 424240 Downloading headers from the command line (Eric Lauriault)
 424248 In --nogui mode, exit when the last task finishes. (Eric Lauriault)
 427165 Task pane's ETA wrong on new xover tasks (Charles)