@@ -3,7 +3,8 @@
 0.130 "FIXME"
  433316 task window coordinates set to -32000 on Windows (Argoyne)
  436101 make nzb suffix filter case-insensitive (Darren Albers)
- 348445 tweak menu text to reflect multiple group selections (Duncan)
+ 348445 tweak menu text to reflect multiple group selections (Darren ALbers)
+  99936 better handling of task errors e.g. write permissions (gabrieltalks)
 
 0.129 "Benson & Hedges Moscow Gold"
  436064 RFE: add 'copy url' to context menu
